[gd_scene load_steps=8 format=2]

[ext_resource path="res://Chocolate.gd" type="Script" id=1]
[ext_resource path="res://Graphics/chocolate.png" type="Texture" id=2]
[ext_resource path="res://Graphics/chocolateDark.png" type="Texture" id=3]
[ext_resource path="res://Graphics/chocolateFaces.png" type="Texture" id=4]

[sub_resource type="Curve2D" id=1]

bake_interval = 5.0
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 799.59, 713.561, 0, 0, 0, 0, 796.24, 418.281, 0, 0, 0, 0, 355.478, 404.678, 0, 0, 0, 0, 350.037, 153.009 )
}

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="Animation" id=3]

resource_name = "ChocolateAnim"
length = 6.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:unit_offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/keys = {
"times": PoolRealArray( 0, 6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.99 ]
}

[node name="ChocolatePath" type="Path2D"]

position = Vector2( -1.99831, 0.540409 )
curve = SubResource( 1 )

[node name="ChocolatePathFollow" type="PathFollow2D" parent="."]

position = Vector2( 799.59, 713.561 )
rotation = 3.14159
offset = 0.0
h_offset = 0.0
v_offset = 0.0
rotate = false
cubic_interp = true
loop = true
lookahead = 4.0

[node name="Chocolate" type="Area2D" parent="ChocolatePathFollow" groups=[
"Creep",
]]

rotation = 3.14159
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="ChocolateSprite" type="Sprite" parent="ChocolatePathFollow/Chocolate"]

texture = ExtResource( 2 )
_sections_unfolded = [ "Animation", "Transform" ]

[node name="ChocolateTint" type="Sprite" parent="ChocolatePathFollow/Chocolate"]

modulate = Color( 1, 1, 1, 0 )
position = Vector2( 0.0314331, 0.145386 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Visibility" ]

[node name="ChocolateFaces" type="Sprite" parent="ChocolatePathFollow/Chocolate"]

texture = ExtResource( 4 )
hframes = 2
_sections_unfolded = [ "Animation", "Transform", "Z" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ChocolatePathFollow/Chocolate"]

visible = false
position = Vector2( -0.239744, 0.0162128 )
scale = Vector2( 2.11337, 2.44358 )
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="ChocolatePathFollow"]

playback_process_mode = 1
playback_default_blend_time = 0.0
root_node = NodePath("..")
anims/ChocolateAnim = SubResource( 3 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "ChocolateAnim"

[connection signal="area_entered" from="ChocolatePathFollow/Chocolate" to="ChocolatePathFollow/Chocolate" method="_on_Chocolate_area_entered"]


